# advent-of-code-2021

./: .gitignore  Cargo.toml
2015/day-01/: Cargo.toml
2015/day-01/src/: main.rs
2015/day-02/: Cargo.toml
2015/day-02/src/: main.rs
2015/day-03/: Cargo.toml
2015/day-03/src/: main.rs
2015/day-04/: Cargo.toml
2015/day-04/src/: main.rs
2015/day-05/: Cargo.toml
2015/day-05/src/: main.rs
2015/day-06/: Cargo.toml
2015/day-06/src/: main.rs
2015/day-07/: Cargo.toml
2015/day-07/src/: main.rs
2015/day-08/: Cargo.toml
2015/day-08/src/: main.rs
2021/day-01/: Cargo.toml
2021/day-01/src/: main.rs
2021/day-02/: Cargo.toml
2021/day-02/src/: main.rs
2021/day-03/: Cargo.toml
2021/day-03/src/: main.rs
2021/day-04/: Cargo.toml
2021/day-04/src/: main.rs
2021/day-05/: Cargo.toml
2021/day-05/src/: main.rs
2021/day-06/: Cargo.toml
2021/day-06/src/: main.rs
2021/day-07/: Cargo.toml
2021/day-07/src/: main.rs
2021/day-08/: Cargo.toml
2021/day-08/src/: main.rs
2021/day-09/: Cargo.toml
2021/day-09/src/: main.rs
2021/day-10/: Cargo.toml
2021/day-10/src/: main.rs
2021/day-13/: Cargo.toml
2021/day-13/src/: main.rs
2021/day-16/: Cargo.toml
2021/day-16/src/: main.rs
2023/day-01/: Cargo.toml
2023/day-01/src/: main.rs
