[workspace]

members = [
    "2015/day-01",
    "2015/day-02",
    "2015/day-03",
    "2015/day-04",
    "2015/day-05",
    "2015/day-06",
    "2015/day-07",
    "2015/day-08",
    "2021/day-01",
    "2021/day-02",
    "2021/day-03",
    "2021/day-04",
    "2021/day-05",
    "2021/day-06",
    "2021/day-07",
    "2021/day-08",
    "2021/day-09",
    "2021/day-10",
    "2021/day-13",
    "2021/day-16",
    "2023/day-01"
]
